--- a/flashcard-aula_10/assets/style.css
+++ b/flashcard-aula_10/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --card-front-color: #0c5466ec;
+    --card-back-color: #30a3b8ee;
 }
 
 body {
@@ -77,12 +77,12 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
+    background-color: rgba(9, 28, 131, 0.103);
     border: 4px solid var(--card-back-color);
 }
 
 footer {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.966);
     color: white;
     position: fixed;
     bottom: 0;
